--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,10 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-hibernate</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 </project>
