--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<encoding>UTF-8</encoding>
 	</properties>
 	<dependencies>
 		<dependency>
